# Particule-Casio-OLD_VERSION

./: .gitignore  Block a faire.txt  Problemes.txt  README.md  Solution.sls  VS config.json
Glacial Project/ProjectSettings/: BuildSettings.txt  ProjectSettings.txt
Glacial Project/SLN/: Solution.sls
Particule/: .particule  Particule.py  ParticuleHub.py  main.py  setup.txt
Particule/ClassParticule/: AddComponentFrame.py  Animator.py  AssetStore.py  BuildSettings.py  Component.py  Console.py  FileVariable.py  FolderWindow.py  GameObject.py  Hierarchy.py  Inspector.py  Layer.py  Object.py  ParticuleEvent.py  ProjectSettingsWindow.py  SaveData.py  Scene.py  SearchWindow.py  ShowAboutWindow.py  Tag.py  Texture.py  Vector2.py
Particule/ClassSystem/: CheckboxTreeview.py  DragAndDropSys.py  Editor.py  EditorWindow.py  FrameDragAndDrop.py  MenuItem.py  PFrame.py  (+10 more)
Particule/lib/Moteur/Gint/ParticuleGame/: CMakeLists.txt
Particule/lib/Moteur/Gint/ParticuleGame/assets-cg/: fxconv-metadata.txt
Particule/lib/Moteur/Gint/ParticuleGame/assets-fx/: fxconv-metadata.txt
Particule/lib/Moteur/Gint/ParticuleGame/src/: ParticuleGintPatch.cpp  ParticuleGintPatch.hpp  ParticuleGraphics.cpp  ParticuleGraphics.hpp  main.cpp
Pyint_Pixel-Painter-master/: Burakcoli-Pyint_Pixel-Painter- A 64x64 Pixel art drawing program made in Python, Pygame-.url  dragon.txt  install_requirements.py  pyint.py
VisualScratch/: VisualScratch.py  main.py
VisualScrtach/: VisualScratch.py  main.py
pygame 2.5D/: 25D.py  Contour.py  PolygoneCollision.py  Test Trevieew.py  TkinterTest.py  TkinterTest2.py
(+443 files in other folders)
